@@ -1,0 +1,9 @@
+Title: host diag page: fixed problem with update of diagnose subwindows
+Level: 2
+Component: wato
+Class: fix
+State: unknown
+Version: 1.2.5i2
+Date: 1396522971
+
+The subwindows in the host diagnostic page did not get updated properly, because of an incorrect transaction handling.
