@@ -16,6 +16,7 @@
 
     WATO:
     * 0767 FIX: Signing and verification of WATO snapshot (addresses CVE-2014-2330)...
+    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
 
     BI:
     * 0741 FIX: BI editor: fixed display bug in "Create nodes based on a service search"...
